Enhance logging and add read-only map utilities
Added detailed logging for message processing and sending to improve traceability. Introduced utilities in `ServerSessionManager` to retrieve read-only snapshots of device channels and contexts, ensuring safe access to connection state.